# CPhysics

./: .gitattributes  .gitignore  CMakeLists.txt  CPhysics.sln  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: main.yml
CPhysics/: CPhysics.vcxproj  CPhysics.vcxproj.filters
CPhysics/include/CPhysics/: AABB.h  Arbiter.h  Body.h  CPhysics.h  Circle.h  Colour.h  Matrix2D.h  Polygon.h  Shape.h  Timer.h  Vectors2D.h  World.h
CPhysics/scr/dynamics/: Body.cpp
CPhysics/scr/geometry/: Circle.cpp
CPhysics/testbed/: Draw.cpp  Draw.h  Main.cpp  Settings.h
Rebuild of cphysics/: Rebuild of cphysics.sln
Rebuild of cphysics/Rebuild of cphysics/: CMakeLists.txt  Rebuild of cphysics.vcxproj  Rebuild of cphysics.vcxproj.filters  imgui.ini
Rebuild of cphysics/Rebuild of cphysics/include/CPhysics/: AABB.h  Arbiter.h  Body.h  CPhysics.h  Circle.h  Explosion.h  Geometry.h  Joint.h  JointToBody.h  JointToPoint.h  Polygon.h  ProximityExplosion.h  Ray.h  RaycastExplosion.h  Rayscatter.h  Shadowcast.h  Shape.h  Slice.h  Vectors2D.h  World.h
Rebuild of cphysics/Rebuild of cphysics/src/: Arbiter.cpp  Body.cpp  Circle.cpp  Joint.cpp  JointToBody.cpp  ParticleExplosion.cpp  Polygon.cpp  ProximityExplosion.cpp  Ray.cpp  RaycastExplosion.cpp  Rayscatter.cpp  Shadowcast.cpp  Slice.cpp  World.cpp
Rebuild of cphysics/Rebuild of cphysics/testbed/: Colour.h  Main.cpp  Render.cpp  Render.h  Settings.h  Test.cpp  Test.h  imgui.ini
Rebuild of cphysics/Rebuild of cphysics/testbed/Tests/: BouncingBall.h  Chains.h  Drag.h  Friction.h  LineOfSight.h  MixedShapes.h  NewtonsCradle.h  ParticleExplosionTest.h  ProximityExplosionTest.h  Raycast.h  RaycastExplosionTest.h  Restitution.h  SliceObjects.h  StackedObjects.h  Trebuchet.h  Wreckingball.h
Rebuild of cphysics/Rebuild of cphysics/tests/: GeometryRegression.cpp  README.md
Rebuild of cphysics/UnitTests/: UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.h
include/CPhysics/: AABB.h  Arbiter.h  Body.h  Circle.h  Joint.h  JointToBody.h  Matrix2D.h  ParticleExplosion.h  ProximityExplosion.h  RaycastExplosion.h  Slice.h  Vectors2D.h  World.h
src/: Arbiter.cpp  Body.cpp  Circle.cpp  Joint.cpp  JointToBody.cpp  JointToPoint.cpp  ParticleExplosion.cpp  Polygon.cpp  Ray.cpp  RaycastExplosion.cpp  Shadowcast.cpp  World.cpp
testbed/: Main.cpp  Render.cpp  Test.cpp  Test.h
testbed/Tests/: BouncingBall.cpp  BouncingBall.h  Chains.cpp  Chains.h  Drag.cpp  Drag.h  Friction.cpp  Friction.h  LineOfSight.cpp  LineOfSight.h  MixedShapes.cpp  MixedShapes.h  NewtonsCradle.cpp  NewtonsCradle.h  ParticleExplosionTest.cpp  ParticleExplosionTest.h  ProximityExplosionTest.cpp  ProximityExplosionTest.h  Raycast.cpp  Raycast.h  RaycastExplosionTest.cpp  RaycastExplosionTest.h  Restitution.cpp  Restitution.h  SliceObjects.cpp  SliceObjects.h  StackedObjects.cpp  StackedObjects.h  Trebuchet.cpp  Trebuchet.h  Wreckingball.cpp  Wreckingball.h  pch.h
tests/: GeometryRegression.cpp  README.md
